--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -77,7 +77,7 @@
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCF4KGeShn6fwnTcRw8y20-NoRSgvKfLCk&libraries=places&callback=initMap"></script>
-  
+
 
 </body>
 
