--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -71,7 +71,7 @@
     <!-- End footer -->
   </div>
 
-
+  <script type="application/javascript" charset="utf-8" src="js/lib/idb.js"></script>
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
