--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
       </section>
     </main>
 
-
+    <script type="application/javascript" charset="utf-8" src="js/lib/idb.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
 
