--- a/app/404.html
+++ b/app/404.html
@@ -2,7 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <!-- https://developers.google.com/web/fundamentals/native-hardware/fullscreen/#launching_a_page_fullscreen_from_home_screen -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#1A1A1A"/>
+    <link rel="manifest" href="/manifest.json">
     <title>404</title>
+    <!--favicon icons -->
+    <link rel="icon" type="image/png" sizes="192x192" href="img/icons-192.png">
+    <!-- favicon icons ends -->
   </head>
   <link rel="stylesheet" href="css/404-or-offline.css">
 
